--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,7 @@
 html {
   /*background: url('./assets/background.png') no-repeat center center fixed;*/
-  background: url('https://github.com/Thinkful-Ed/js-dev-final-capstone-starter/blob/main/assets/background.png?raw=true') no-repeat center center fixed;
+  /*background: url('https://github.com/Thinkful-Ed/js-dev-final-capstone-starter/blob/main/assets/background.png?raw=true') no-repeat center center fixed;*/
+  background-image: url("../assets/green.jpg");
   box-sizing: border-box;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -14,7 +15,8 @@ h1 {
   text-align: center;
   font-size: 90px;
   font-family: "Comic Sans MS", "Comic Sans", cursive;
-  color: white;
+  color: purple;
+  text-decoration-line: white;
   -webkit-text-stroke: 2px black;
 }
 
@@ -25,9 +27,22 @@ h2 {
   -webkit-text-stroke: 1px black;
 }
 
+#start-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 200px;
+  
+}
+
+
 #start {
     text-align: center;
     font-size: 30px;
+    color: white;
+    border-radius: 15px;
+    background-color: purple;
+
 }
 
 #timer{
