--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,7 @@
 html {
   /*background: url('./assets/background.png') no-repeat center center fixed;*/
   /*background: url('https://github.com/Thinkful-Ed/js-dev-final-capstone-starter/blob/main/assets/background.png?raw=true') no-repeat center center fixed;*/
-  background-image: url("../assets/green.jpg");
+  background-image: url("../assets/green2.jpg");
   box-sizing: border-box;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -55,7 +55,7 @@ h2 {
   display: flex;
   flex-wrap: wrap;
   margin: 0 auto;
-  /*cursor: url('./assets/mallet.png'), pointer;*/
+  cursor: url('../assets/mallet.png'), pointer;
 }
 
 .hole {
@@ -79,8 +79,8 @@ h2 {
 }
 
 .mole {
-  /*background:url('./assets/mole.png') bottom center no-repeat;*/
-  background:url('https://github.com/Thinkful-Ed/js-dev-final-capstone-starter/blob/main/assets/mole.png?raw=true') bottom center no-repeat;
+  background:url('../assets/mole2.png') bottom center no-repeat;
+  /*background:url('https://github.com/Thinkful-Ed/js-dev-final-capstone-starter/blob/main/assets/mole.png?raw=true') bottom center no-repeat;*/
   background-size: 40%;
   position: absolute;
   top: 100%;
